# tle-reader

./: pyproject.toml
src/tle_reader/: main.py  typing.py  utils.py
tests/: test_utils.py
