[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tle-reader"
authors = [{ name = "Jonathan Olsten", email = "jonathan.olsten@gmail.com" }]
description = " A Parser for Space Command TLEs"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "setuptools",
    "setuptools-scm",
    "build",
    "wheel",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["tle_reader"]

[tool.setuptools_scm]
parentdir_prefix_version = "tle-reader-"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=tle_reader --cov-report html"
testpaths = ["tests"]
